src/test/deca/syntax/invalid/declField-noVar.synt
declField-noVar.deca:2:
